--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     (Deva G)
 </p>
         <footer>
-            <p>GD</p>
+            <small>GD</small>
         </footer>
     </body>
 </html>
